# NIRWizard

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.claude/: MCX_Export_Implementation_Plan.md  NIRWizard_Pipeline_Plan.md  NIRWizard_Roadmap.md  NIRWizard_SNIRF_Audit_and_Explorer_Design.md  NIRWizard_v2_Architecture.md  NIRwizard-Architecture-Review(1).md  cofreplan.md  settings.local.json
docs/: plan.md  snirf-parsing-notes.md  working-directory.md
src/: App.svelte  app.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  setup.rs  snirf.rs  state.rs
src-tauri/src/analysis/: mod.rs  spectrum.rs  window.rs
src-tauri/src/commands/: anatomy.rs  events.rs  file_commands.rs  info_commands.rs  mesh.rs  mod.rs  pipeline.rs  probe.rs  scene.rs  spectral.rs  spectral_commands.rs  summary.rs  timeseries.rs  timeseries_commands.rs  voxel.rs
src-tauri/src/domain/: analysis_cache.rs  anatomy.rs  channel.rs  channel_index.rs  error.rs  math.rs  mcx.rs  mesh.rs  mod.rs  mri.rs  nirs_view.rs  pipeline.rs  probe.rs  scene.rs  snirf.rs  summary.rs  voxel.rs
src-tauri/src/dsp/: mod.rs  spectrum.rs
src-tauri/src/io/: anatomy_importer.rs  hdf5_parser.rs  mesh_importer.rs  mod.rs  snirf_exporter.rs  snirf_parser.rs
src-tauri/src/processing/: mod.rs
src-tauri/src/services/: session_service.rs  timeseries_service.rs
src-tauri/src/spectral/: mod.rs  spectrum.rs  window.rs
src-tauri/src/state/: mod.rs  selection.rs  session.rs  state_old.rs
(+49 files in other folders)
