[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
nalgebra = { version = "0.34", features = ["serde-serialize"] }
hdf5 = { package = "hdf5-metno", version = "0.12.3"}
ndarray = "0.15"
ndarray16 = { package = "ndarray", version = "0.16" }
uuid = { version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
tobj = { "version" = "4.0.3"}
kiddo = { "version" = "5.2.4"}
bvh = { "version" = "0.12.0" }
parry3d = { "version" = "0.26.0" }
neuroformats = "0.3"
